configs/k8s_configs/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: medvoyage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: dev.kalyanch.com:5000/medvoyage:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-storage
              mountPath: /app/static
      volumes:
        - name: static-storage
          persistentVolumeClaim:
            claimName: static-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: medvoyage
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: django
  clusterIP: None
