configs/k8s_configs/nginx.yaml
# Nginx Deployment & Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: medvoyage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: static-volume
              mountPath: /usr/share/nginx/html/static
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: medvoyage
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: medvoyage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: medvoyage.kalyanch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
